fix: enable analytics when importing native apis